--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
     <string name="title_organization">Organization</string>
     <string name="title_me">Me</string>
     <string name="title_activity_home">HomeActivity</string>
+    <string name="item_name">Item Name</string>
+    <string name="item_detail">Item Detail</string>
+    <string name="item_condition">Item Condition</string>
+    <string name="list_it">List It</string>
+    <string name="radio_new">New</string>
+    <string name="radio_used">Used</string>
 </resources>
