--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,16 +7,18 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="charity">Charity</string>
     <string name="back">Back</string>
-    <string name="title_home">Home</string>
+    <string name="title_browse">Browse</string>
     <string name="title_category">Category</string>
     <string name="title_donate">Donate</string>
     <string name="title_organization">Organization</string>
     <string name="title_me">Me</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="item_name">Item Name</string>
-    <string name="item_detail">Item Detail</string>
+    <string name="item_detail">Item Details</string>s
     <string name="item_condition">Item Condition</string>
     <string name="list_it">List It</string>
     <string name="radio_new">New</string>
     <string name="radio_used">Used</string>
+    <string name="preferred_location">Preferred Meet-Up</string>
+    <string name="location">Location</string>
 </resources>
