--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">ICT2105_Prototype</string>
     <string name="login">Login</string>
+    <string name="logout">Logout</string>
     <string name="register">Register</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
@@ -10,15 +11,20 @@
     <string name="title_browse">Browse</string>
     <string name="title_category">Category</string>
     <string name="title_donate">Donate</string>
-    <string name="title_organization">Organization</string>
+    <string name="title_organization">Charity Organizations</string>
     <string name="title_me">Me</string>
+    <string name="title_chat">Chat</string>
+    <string name="title_vert_menu">Vertical Menu</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="item_name">Item Name</string>
-    <string name="item_detail">Item Details</string>s
+    <string name="item_detail">Item Details</string>
     <string name="item_condition">Item Condition</string>
     <string name="list_it">List It</string>
     <string name="radio_new">New</string>
     <string name="radio_used">Used</string>
     <string name="preferred_location">Preferred Meet-Up</string>
     <string name="location">Location</string>
+    <string name="default_bio">This is my bio</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="books">Books</string>
 </resources>
